[gd_scene load_steps=41 format=2]

[ext_resource path="res://Characters/Heros/Samurai/Samurai.gd" type="Script" id=1]
[ext_resource path="res://Utils/AwarenessZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Utils/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Heros/Samurai/Samurai.png" type="Texture" id=4]
[ext_resource path="res://Utils/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16.5 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.69515
height = 4.76167

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Attack Left"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Attack Down"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Attack Up"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Attack Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=25]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Idle Left"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "Idle Left"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "Idle Right"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "Idle Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=30]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = Vector2( -1, 0.1 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( -0.1, -1 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 0.1, 1 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 1, -0.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "Walk Left"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Walk Down"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Walk Up"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "Walk Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=35]
blend_point_0/node = SubResource( 31 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 32 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 33 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 34 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachine" id=8]
states/Attack/node = SubResource( 25 )
states/Attack/position = Vector2( 211.297, 236.396 )
states/Idle/node = SubResource( 30 )
states/Idle/position = Vector2( 209.963, 120.914 )
states/Walk/node = SubResource( 35 )
states/Walk/position = Vector2( 418.63, 120.84 )
transitions = [ "Idle", "Walk", SubResource( 36 ), "Walk", "Idle", SubResource( 37 ), "Idle", "Attack", SubResource( 38 ), "Attack", "Idle", SubResource( 39 ) ]
start_node = "Idle"
graph_offset = Vector2( -616.615, 38.0625 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[sub_resource type="Animation" id=10]
resource_name = "Attack Down"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "Attack Left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32, 33 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "Attack Right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32, 33 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "Attack Up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "Idle Left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00393193, 0.0971648, 0.204158, 0.306993 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00393193, 0.0971648, 0.204158, 0.306993 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Walk Down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -1.86265e-09, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Walk Left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0168345, 0.122651, 0.221734, 0.312159, 0.404509, 0.509363, 0.606522, 0.715225 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0153915 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0168345, 0.122651, 0.221734, 0.312159, 0.404509, 0.509363, 0.606522, 0.715225 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
resource_name = "Walk Up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[node name="Samurai" type="KinematicBody2D" groups=["Hero"]]
position = Vector2( 434, 252 )
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 20.1422, -1.5 )
shape = SubResource( 1 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 39
frame = 12

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
"anims/Attack Down" = SubResource( 10 )
"anims/Attack Left" = SubResource( 11 )
"anims/Attack Right" = SubResource( 12 )
"anims/Attack Up" = SubResource( 13 )
"anims/Idle Left" = SubResource( 14 )
"anims/Idle Right" = SubResource( 15 )
anims/RESET = SubResource( 16 )
"anims/Walk Down" = SubResource( 17 )
"anims/Walk Left" = SubResource( 18 )
"anims/Walk Right" = SubResource( 19 )
"anims/Walk Up" = SubResource( 20 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AwarenessZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AwarenessZone"]
position = Vector2( -10, 4 )
polygon = PoolVector2Array( 14, -4, 70, -60, 70, 44 )

[connection signal="body_entered" from="AwarenessZone" to="." method="_on_AwarenessZone_body_entered"]
[connection signal="body_exited" from="AwarenessZone" to="." method="_on_AwarenessZone_body_exited"]
